feat: hammer for leaf forever for life for bees

--- a/arty.yml
+++ b/arty.yml
@@ -19,4 +19,4 @@ scripts:
   test/setup: "arty exec judge setup"
   test/verbose: "arty exec judge run -v"
   test/ci: "TERM=linux arty exec judge run"
-  docs: arty exec leaf docs -o ./docs --project-dir . --logo ./icon.svg --base-path whip.sh
+  docs: arty exec leaf docs --logo ./icon.svg --base-path whip.sh -o ./docs
